<resources>
    <string name="app_name">WeBook</string>
    <string name="notes">Notes</string>
    <string name="link_url">Link URL</string>
    <string name="to_do_list">To Do List</string>
    <string name="image">Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="we_book">We Book</string>
    <string name="info_webook_co_id">info@webook.co.id</string>
    <string name="fragment_test">Fragment Test</string>
    <string name="fragment_notes">Fragment Notes</string>
    <string name="fragment_url">Fragment URL</string>
    <string name="fragment_todo">Fragment ToDO</string>
    <string name="fragment_image">Fragment Image</string>
    <string name="logo_webook">Logo WeBook</string>
    <string name="save">Save</string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnection_Dialog_Title">Perform Sync Using</string>
    <string name="pref_syncConnection_Default_Summary">WiFI</string>
    <string name="pref_syncConnectionType_Default_Value">WiFi</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="add">Add</string>

    <string-array name="pref_syncConnectionType_Entries">
        <item>WiFi</item>
        <item>Mobile</item>
        <item>Wifi / Mobile</item>
    </string-array>

    <string-array name="pref_syncConnectionType_Values">
        <item>Wifi</item>
        <item>Mobile</item>
        <item>WiFi_Mobile</item>
    </string-array>

</resources>
