<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/account"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10sp"
        android:text="@string/backup"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backup"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15sp"
        android:text="@string/restore"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restore"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/security"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/security"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15sp"
        android:text="@string/change_password"
        android:textSize="16sp" />


</RelativeLayout>